# plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildWindows.sh  vcpkg.json
.github/workflows/: plugins_build.yml
6.x/: CMakeLists.txt  README.md  vcpkg.json
6.x/cmake/Modules/: FindFAUST.cmake
6.x/csound/: README.md  Soundfile.hpp  cs_glue.hpp  float-version.h  pffft.h
6.x/installer/macosx/: release-build.sh
6.x/installer/macosx/scripts/: postinstall
6.x/installer/win64/: Installer.iss
6.x/src/AbletonLinkOpcodes/: CMakeLists.txt  ableton_link_opcodes.cpp
6.x/src/CUDA/: CMakeLists.txt  pconv.cu
6.x/src/chua/: CMakeLists.txt  ChuaOscillator.cpp
6.x/src/faustcsound/: CMakeLists.txt  faustgen.cpp
6.x/src/fluidOpcodes/: CMakeLists.txt  fluidOpcodes.cpp
6.x/src/hdf5/: CMakeLists.txt  HDF5IO.c
6.x/src/image/: CMakeLists.txt
6.x/src/jackops/: CMakeLists.txt  jacko.cpp
6.x/src/linear_algebra/: CMakeLists.txt  linear_algebra.cpp
6.x/src/mp3/: CMakeLists.txt  mp3out.c
6.x/src/opencl/: CMakeLists.txt  buildc.sh  libcl.dylib
6.x/src/opencl/libclconv.dylib.dSYM/Contents/: Info.plist
6.x/src/p5glove/: CMakeLists.txt
6.x/src/p5glove/libp5glove/: p5glove.c  p5glove.h
6.x/src/py/: CMakeLists.txt
6.x/src/py/examples/: pyassign.orc
6.x/src/py/examples/cabrera/: python4.csd  pythonlocal.csd
6.x/src/py/src/: pycall.auto.h  pyx.auto.c
6.x/src/stk/: CMakeLists.txt  stkOpcodes.cpp
6.x/src/stk/Android/jni/: Application.mk
6.x/src/websockets/: CMakeLists.txt  WebSocketOpcode.h
6.x/src/widgets/: CMakeLists.txt  FL_graph.cpp  widgets.cpp  winFLTK.c
6.x/src/widgets/virtual_keyboard/: KeyboardMapping.cpp
6.x/src/wiimote/: CMakeLists.txt
7.x/: CMakeLists.txt  README.md
7.x/src/py/: CMakeLists.txt
7.x/src/py/examples/: ievent.orc  pyexec2.py  pyexect1.py  pyexect2.py  pyexect3.py  pyexect4.py  pyrun.orc
7.x/src/py/examples/cabrera/: python0.csd  python1.csd  python2.csd  python3.csd  python4.csd  python5.csd  pythonlocal.csd  pythonlocal2.csd  pythonmarkov.csd
7.x/src/py/src/: pycall.auto.c  pythonhelper.h  pythonopcodes.c  pyx-gen.py  pyx.auto.c
AbletonLinkOpcodes/: CMakeLists.txt
CUDA/: CMakeLists.txt  pconv.cu  pvsops.cu
ampmidid/: CMakeLists.txt
cellular/: CMakeLists.txt
chua/: CMakeLists.txt  ChuaOscillator.cpp
cmake/: CompilerOptimizations.cmake  utilities.cmake
cmake/Modules/: FindCSOUND.cmake  FindCsound.cmake  FindEIGEN3.cmake  FindFAUST.cmake  FindFLUIDSYNTH.cmake  FindLAME.cmake  FindSTK.cmake
cs_date/: CMakeLists.txt
csound/: CppSound.hpp  CsoundFile.hpp  csPerfThread.cpp  csPerfThread.hpp  filebuilding.h  version.h
debug/wiimote/: Makefile  cmake_install.cmake  libwiimote.dylib
doppler/: CMakeLists.txt
fareygen/: CMakeLists.txt
faustcsound/: CMakeLists.txt  README.md  faustgen.cpp
fluidOpcodes/: fluidOpcodes.cpp
ftsamplebank/: CMakeLists.txt
getftargs/: CMakeLists.txt
gtf/: CMakeLists.txt
hdf5/: CMakeLists.txt  HDF5IO.c  HDF5IO.h
image/: CMakeLists.txt  README.md  imageOpcodes.c
installer/macosx/: release-build.sh
installer/win64/: Installer.iss  buildWindows.sh
jackops/: CMakeLists.txt  jacko.cpp
liveconv/: CMakeLists.txt
mixer/: CMakeLists.txt
mp3/: CMakeLists.txt  mp3out.c
opencl/: CMakeLists.txt  buildcpp.sh  clconv.csd  openclop.cpp
opencl/libclconv.dylib.dSYM/Contents/Resources/DWARF/: libclconv.dylib
p5glove/: CMakeLists.txt  p5glove.c
p5glove/libp5glove/: p5glove.c  usb_hid_macosx.c
plugins/AbletonLinkOpcodes/: CMakeLists.txt
plugins/AbletonLinkOpcodes/AbletonLinkOpcodes/: AbletonLinkOpcodes.vcxproj
plugins/CUDA/: adsyn.cu
plugins/faustcsound/: README.md
plugins/image/: CMakeLists.txt  imageOpcodes.c
plugins/linear_algebra/: CMakeLists.txt
plugins/opencl/: libclconv.dylib
plugins/py/: CMakeLists.txt
plugins/py/examples/: pyexec4.py
plugins/py/examples/cabrera/: python3.csd
plugins/py/src/: README.md
py/: CMakeLists.txt  README.md
py/examples/: pycallt.orc  pyexec1.py  pyrun.csd  pyrunt.orc
py/examples/cabrera/: python0.csd  pythonlocal.csd  pythonlocal2.csd
py/src/: pycall-gen.py  pythonhelper.h  pythonopcodes.c  pythonopcodes.h  pyx-gen.py  pyx.auto.c
quadbezier/: CMakeLists.txt
signalflowgraph/: CMakeLists.txt
src/AbletonLinkOpcodes/: CMakeLists.txt  ableton_link_opcodes.cpp
src/AbletonLinkOpcodes/AbletonLinkOpcodes/: AbletonLinkOpcodes.sln
src/CUDA/: CMakeLists.txt  slidingm.cu
src/chua/: CMakeLists.txt
src/faustcsound/: CMakeLists.txt
src/fluidOpcodes/: CMakeLists.txt
src/fluidOpcodes/Android/jni/: Android.mk
src/hdf5/: CMakeLists.txt
src/image/: CMakeLists.txt
src/jackops/: CMakeLists.txt  jacko.cpp  jacko_test.csd  jacko_test.txt
src/linear_algebra/: CMakeLists.txt
src/mp3/: CMakeLists.txt  mp3out.c
src/opencl/: cladsynth2.cpp
src/p5glove/: CMakeLists.txt
src/p5glove/libp5glove/: usb_hid_macosx.c
src/py/: CMakeLists.txt
src/py/examples/: ievent.orc
src/py/examples/cabrera/: python5.csd
src/py/src/: pyx.auto.h
src/stk/: CMakeLists.txt
src/websockets/: CMakeLists.txt  WebSocketOpcode.c
src/widgets/: CMakeLists.txt
src/wiimote/: CMakeLists.txt
stk/: CMakeLists.txt
system_call/: CMakeLists.txt
websockets/: CMakeLists.txt  WebSocketOpcode.c
widgets/: CMakeLists.txt  widgets.cpp
widgets/virtual_keyboard/: virtual_keyboard.cpp
