# Build faustcsound opcodes
find_package(FAUST)

check_deps(BUILD_FAUST_OPCODES FAUST_FOUND)
if(BUILD_FAUST_OPCODES)
    make_plugin(faustcsound faustgen.cpp)
    target_include_directories(faustcsound PRIVATE ${CSOUND_INCLUDE_DIRS})
    if(APPLE)
        target_link_libraries(faustcsound -lcrypto)
        target_link_libraries(faustcsound -lncurses)
        target_link_libraries(faustcsound -lz)
    else()
        target_link_libraries(faustcsound -Wl,-no-as-needed -lcrypto)
        target_link_libraries(faustcsound -Wl,-no-as-needed -lncurses)
        target_link_libraries(faustcsound -Wl,-no-as-needed -lz)
    endif()
    target_link_libraries(faustcsound ${PTHREAD_LIBRARY})
    target_compile_definitions(faustcsound PRIVATE "-DFAUSTFLOAT=MYFLT")

    if(PTHREAD_LIBRARY)
        target_compile_definitions(faustcsound PRIVATE "-DHAVE_PTHREAD")
    endif()

    if(APPLE)
        if(${OSX_VERSION} STREQUAL "10.6")
            target_link_libraries(faustcsound ${FAUST_LIBRARIES} -ldl -L$ENV{HOME}/lib -L/usr/local/lib ${LLVM_LIBS})
        else()
            target_compile_options(faustcsound PRIVATE "-stdlib=libc++")
            target_link_libraries(faustcsound ${FAUST_LIBRARIES} -stdlib=libc++ -ldl -L$ENV{HOME}/lib -L/usr/local/lib ${LLVM_LIBS})
        endif()
    else()
        target_link_libraries(faustcsound ${FAUST_LIBRARIES} -ldl -L$ENV{HOME}/lib -L/usr/local/lib ${LLVM_LIBS})
    endif()
    target_include_directories(faustcsound PRIVATE ${LLVM_DIR})
endif()
