# Build py opcodes
if(${BUILD_PYTHON_OPCODES})
       find_package(Python3 COMPONENTS Interpreter Development)
       set(PYTHON_INCLUDE_DIRS ${Python3_INCLUDE_DIRS})
       message("-- Python include dirs:   ${Python3_INCLUDE_DIRS}")
       set(PYTHON_LIBRARIES ${Python3_LIBRARIES})
       message("-- Python libraries:   ${PYTHON_LIBRARIES}")
       check_deps(BUILD_PYTHON_OPCODES Python3_FOUND)
    
    if(BUILD_PYTHON_OPCODES)
	make_plugin(py src/pythonopcodes.c)
	target_include_directories(py PRIVATE ${CSOUND_INCLUDE_DIRS})
	target_include_directories(py PRIVATE ${PYTHON_INCLUDE_DIRS})
	target_link_libraries(py ${PYTHON_LIBRARIES})
    endif()
endif()                                                                                 
